# medalign-rlhf

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: dpo.yaml  quant.yaml  rag.yaml  sft.yaml
docs/: IMPLEMENTATION.md
kaggle_notebooks/: kaggle_01_sft_qlora.ipynb  kaggle_02_generate_dpo_pairs.ipynb  kaggle_03_dpo_alignment.ipynb  kaggle_04_build_rag_index.ipynb
scripts/: build_calibration.py  build_rag_index.py  prepare_sft_data.py  quantize_gguf.py  run_benchmarks.py  serve.py
src/medalign/eval/: llm_judge.py  ragas_eval.py
src/medalign/quantization/: benchmark.py
src/medalign/rag/: hybrid.py
src/medalign/training/: __init__.py  dpo.py  sft.py
tests/unit/: test_format.py  test_rrf.py
